# hitl-slam

./: README.md
HitL-SLAM/: CMakeLists.txt  README.txt  README_TEST.txt  RunHitLSLAM.sh  manifest.xml
HitL-SLAM/config/: common.cfg  non_markov_localization.cfg  robot.cfg
HitL-SLAM/src/HitL/: ApplyExplicitCorrection.cpp  ApplyExplicitCorrection.h  Backprop.cpp  CMakeLists.txt  EMinput.cpp  HitLSLAM_main.cpp  JointOptimization.cpp  JointOptimization.h  bicubic_interpolation.cpp  residual_functors.h
HitL-SLAM/src/episodic_non_markov_localization/: vector_mapping.h  vector_mapping_main.cpp
HitL-SLAM/src/gui/: CMakeLists.txt  generate_wrappings.py  gltext.cpp  gltext.h  gui_publisher_helper.cpp  gui_publisher_helper.h  py_vector_display.cpp  py_vector_display.h  py_vector_display.sip  vector_display.cpp  vector_display.h  vector_display_main.cpp  vector_display_thread.cpp  vector_display_thread.h
HitL-SLAM/src/gui/universal_view_log/: viewer_widget.cpp  viewer_widget.h
HitL-SLAM/src/human_in_the_loop_slam/: .HitLSLAM.cpp.kate-swp  .HitLSLAM.h.kate-swp  ApplyExplicitCorrection.cpp  ApplyExplicitCorrection.h  Backprop.cpp  Backprop.h  CMakeLists.txt  EMinput.cpp  EMinput.h  HitLSLAM.cpp  HitLSLAM.h  HitLSLAM_main.cpp  HitLSLAM_main.orig.cpp  JointOptimization.cpp  JointOptimization.h  human_constraints.h  residual_functors.h
HitL-SLAM/src/human_in_the_loop_slam/.kdev4/: HitL.kdev4
HitL-SLAM/src/long_term_vector_mapping/: CMakeLists.txt  LTVM.cpp  LTVM.h  LTVM_main.cpp  RANSAC.cpp  RANSAC.h  SDF.cpp  SDF.h  sdf_vector_maps.h
HitL-SLAM/src/map/: CMakeLists.txt  navigation_map.cpp  navigation_map.h  vector_map.cpp  vector_map.h
HitL-SLAM/src/perception_tools/: CMakeLists.txt  kdtree.cpp  kdtree.h  perception_2d.cpp  perception_2d.h
HitL-SLAM/src/shared/math/: eig3.cpp  eigen_helper.h  geomalgo.h  geometry.h  gvector.cpp  gvector.h  line.h  quaternion_helper.h  triangle.h  util.h
HitL-SLAM/src/shared/util/: algorithm_timer.cpp  algorithm_timer.h  ansicolor.h  configreader.cpp  configreader.h  configreader_test.cpp  extensions.h  helpers.cpp  helpers.h  openmp_utils.h  proghelp.cc  proghelp.h  pthread_utils.cpp  pthread_utils.h  sstring.h  terminal_utils.cpp  terminal_utils.h  timer.cc  timer.h  watch_files.cpp  watch_files.h
HitL-SLAM/src/vmapping/: CMakeLists.txt  vector_mapping.cpp  vector_mapping.h  vector_mapping_main.cpp
vector_slam_msgs/: manifest.xml
vector_slam_msgs/msg/: CobotAnomalyMonitorMsg.msg  CobotAnomalyMonitorRectangleMsg.msg  CobotCameraMsg.msg  CobotEventsMsg.msg  CobotLocalization3DMsg.msg  CobotLocalizationMsg.msg  CobotOdometryMsg.msg  CobotStatusMsg.msg  GuiKeyboardEvent.msg  GuiMouseClickEvent.msg  GuiMouseMoveEvent.msg  LidarDisplayMsg.msg  LocalizationMsg.msg
vector_slam_msgs/msg_gen/cpp/include/vector_slam_msgs/: CobotAnomalyMonitorMsg.h  CobotAnomalyMonitorRectangleMsg.h  CobotCameraMsg.h  CobotEventsMsg.h  CobotLocalization3DMsg.h  CobotLocalizationMsg.h  CobotOdometryMsg.h  CobotStatusMsg.h  GuiKeyboardEvent.h  GuiMouseClickEvent.h  GuiMouseMoveEvent.h  LidarDisplayMsg.h  LocalizationMsg.h
vector_slam_msgs/src/vector_slam_msgs/msg/: _CobotAnomalyMonitorMsg.py  _CobotAnomalyMonitorRectangleMsg.py  _CobotCameraMsg.py  _CobotEventsMsg.py  _CobotLocalization3DMsg.py  _CobotLocalizationMsg.py  _CobotOdometryMsg.py  _CobotStatusMsg.py  _GuiKeyboardEvent.py  _GuiMouseClickEvent.py  _GuiMouseMoveEvent.py  _LidarDisplayMsg.py  _LocalizationMsg.py  __init__.py
vector_slam_msgs/src/vector_slam_msgs/srv/: _CobotLocalizationSrv.py  _CobotRemoteInterfaceSrv.py  _LocalizationGuiCaptureSrv.py  __init__.py
vector_slam_msgs/srv/: CobotLocalizationSrv.srv  CobotRemoteInterfaceSrv.srv  LocalizationGuiCaptureSrv.srv
vector_slam_msgs/srv_gen/cpp/include/vector_slam_msgs/: CobotLocalizationSrv.h  CobotRemoteInterfaceSrv.h  LocalizationGuiCaptureSrv.h
